--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
 
     <div class="cointainer">
-        <form>
-            <label>What is tour name ?</label>
-            <input>
-        </form>
+        <h1>Wellcome to my form exercise</h1>
+        <fieldset class = "form" >
+            <form>
+                <label>Name</label>
+                <input type="text" value="Fill in full name">
+            </form>
+        </fieldset>
     </div>
 
     <script src="index.js"></script>
