started with first input

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stil.css" />
     <title>Make a Form</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="cointainer">
-        <h1>Wellcome to my form exercise</h1>
-        <fieldset class = "form" >
-            <form>
-                <label>Name</label>
-                <input type="text" value="Fill in full name">
-            </form>
-        </fieldset>
+      <h1>Wellcome to my form exercise</h1>
+      <fieldset class="form">
+        <form>
+          <label class="nameLabel">Name</label>
+          <input
+            class="nameInput"
+            type="text"
+            placeholder="Fill in full name"
+          />
+        </form>
+      </fieldset>
     </div>
 
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
