password and comfirm working but not looking nice jet

--- a/index.html
+++ b/index.html
@@ -33,20 +33,25 @@
           </div>
 
           <div>
-            <label class="namePassword">Password</label>
-            <input
-                class="paswordInput"
-                type="password"
-                placeholder="Fill in a password"
-                required
-            />
-            <div class="ckeckOk"></div>
-            <input
-                class="paswordInputConfirm"
-                type="password"
-                placeholder="Confirm password"
-                required
-            />
+            <div class="boxPassword">
+                <label class="namePassword">Password</label>
+                <input
+                    class="paswordInput"
+                    type="password"
+                    placeholder="Fill in a password"
+                    required
+                />
+                <div class="ckeckOk"></div>
+            </div>
+                <div class="boxPasswordConfirm">
+                <input
+                    class="paswordInputConfirm"
+                    type="password"
+                    placeholder="Confirm password"
+                    required
+                />
+                <div class="ckeckOkPassword"></div>
+            </div>
           </div>
 
         </form>
