added submit button, and object collecting data. need to work over password part again

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
                     required
                 />
             </div>
+            <!--E-mail-->
+            <div>
+                <label class="email">E-mail</label>
+                <input
+                    class="emailInput"
+                    type="email"
+                    placeholder="Your e-mail address"
+                    required
+                />
+            </div>
             <!--Password and confirm password-->
             <div>
                 <div class="boxPassword">
@@ -55,19 +65,9 @@
                     <div class="ckeckOkPassword"></div>
                 </div>
             </div>
-            <!--E-mail-->
-            <div>
-                <label class="email">E-mail</label>
-                <input
-                    class="emailInput"
-                    type="email"
-                    placeholder="Your e-mail address"
-                    required
-                />
-            </div>
             <!--Submit-->
             <div>
-            <button class="btn">Submit</button>
+            <button class="btn" type="submit">Submit</button>
             </div>
         </form>
       </fieldset>
