Finished form, working more or less, still need to add the alert box now only control log finish info working

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <div class="cointainer">
-      <h1>Wellcome to my form exercise</h1>
+      <h1>Sign up to be a fox</h1>
+      <img src="vecteezy_cute-fox-clipart-transparent-background_21980600.png" alt="fox" class="fox"/>
       <fieldset class="form">
         <form class=formInputs>
 
             <!--Name-->
-            <div>
+            <div class="boxname">
                 <label class="nameLabel">Name</label>
                 <input
                     class="nameInput"
@@ -23,7 +24,7 @@
                 />
             </div>
             <!--UserName-->
-            <div>
+            <div class="boxUser">
                 <label class="nameUsername">Username</label>
                 <input
                     class="usernameInput"
@@ -33,7 +34,7 @@
                 />
             </div>
             <!--E-mail-->
-            <div>
+            <div class="boxEmail">
                 <label class="email">E-mail</label>
                 <input
                     class="emailInput"
